@@ -157,7 +157,8 @@ static bool doSetTile_default(const Pen &pen, int x, int y, bool map)
 
     *screen = 0;
     *texpos = 0;
-    *texpos_lower = 0;
+    if (!pen.keep_lower)
+        *texpos_lower = 0;
     gps->screentexpos_anchored[index] = 0;
     // keep SCREENTEXPOS_FLAG_ANCHOR_SUBORDINATE so occluded anchored textures
     // don't appear corrupted
@@ -171,7 +172,8 @@ static bool doSetTile_default(const Pen &pen, int x, int y, bool map)
 
         *screen = 0;
         *texpos = 0;
-        *texpos_lower = 0;
+        if (!pen.keep_lower)
+            *texpos_lower = 0;
         gps->screentexpos_top_anchored[index] = 0;
         *flag &= 4; // keep SCREENTEXPOS_FLAG_ANCHOR_SUBORDINATE
     }
@@ -190,10 +192,13 @@ static bool doSetTile_default(const Pen &pen, int x, int y, bool map)
     }
 
     if (pen.tile && use_graphics) {
-        *texpos = pen.tile;
+        if (pen.write_to_lower)
+            *texpos_lower = pen.tile;
+        else
+            *texpos = pen.tile;
     } else {
         screen[0] = uint8_t(pen.ch);
-        *texpos_lower = 909;
+        *texpos_lower = 909; // basic black background
     }
 
     auto rgb_fg = &gps->uccolor[fg][0];
